--- a/redditClone.html
+++ b/redditClone.html
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="redditStyle.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="/stylesheets/redditStyle.css" media="screen" charset="utf-8">
   </head>
   <body ng-init="posts=posts">
     <nav class="navbar navbar-default">
@@ -149,6 +149,6 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap.js'>
     </script>
-    <script type="text/javascript" src="redditClone.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/javascripts/redditClone.js" charset="utf-8"></script>
   </body>
 </html>
